--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                       <a href="#slide4" class="btn btn-circle">❯</a>
                     </div>
                 </div>
-                <div id="slide4" class="carousel-item relative w-full mx-auto flex flex-col md:flex-col justify-center items-center">
+                <div id="slide4" class="carousel-item relative w-full mx-auto flex flex-col md:flex-row justify-center items-center">
                     <div class="w-full md:w-2/5 p-2 flex flex-col justify-center items-start">
                       <h1 class="text-5xl font-bold">Ride-on R15 V4 with Smile</h1>
                       <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perspiciatis eius impedit expedita molestiae illum mollitia ex praesentium porro, est a!</p>
